<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:transitionName="row_item_image"
        app:cardCornerRadius="2dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/row_item_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="san-serif"
                android:padding="8dp"
                android:text="@string/list_row_head"
                android:textSize="@dimen/text_head"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/row_item_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="san-serif"
                android:paddingBottom="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/list_row_date"
                android:textSize="@dimen/text_content"
                android:textStyle="normal" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/grey">

                <ImageView
                    android:id="@+id/row_item_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY" />
            </RelativeLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/row_item_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="san-serif"
                android:paddingBottom="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:text="@string/list_row_subtitle"
                android:textSize="@dimen/text_content"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/row_item_views"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="san-serif"
                    android:text="@string/list_row_views"
                    android:textSize="@dimen/text_small"
                    android:textStyle="normal" />

                <!--<android.support.v7.widget.AppCompatTextView
                    android:id="@+id/row_item_likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="san-serif"
                    android:paddingLeft="8dp"
                    android:text="@string/list_row_likes"
                    android:textSize="@dimen/text_small"
                    android:textStyle="normal" />-->

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/row_item_comments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="san-serif"
                    android:paddingLeft="8dp"
                    android:text="@string/list_row_comments"
                    android:textSize="@dimen/text_small"
                    android:textStyle="normal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end|center_vertical"
                    android:orientation="horizontal">

                    <!-- <com.joanzapata.iconify.widget.IconButton
                         android:id="@+id/like"
                         android:layout_width="40dp"
                         android:layout_height="30dp"
                         android:background="@android:color/transparent"
                         android:fontFamily="san-serif"
                         android:gravity="center"
                         android:text="{ic-like}"
                         android:textSize="16sp" />-->

                    <com.joanzapata.iconify.widget.IconButton
                        android:id="@+id/share"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="8dp"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:text="{ic-share}"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
            <!-- <include layout="@layout/fragment_details_sectorial" />-->

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>